--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
 	<link rel='stylesheet' href='/build/bundle.css'>
 	<link rel='stylesheet' href='/build/sass_bundle.css'>
 
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	
 	<script defer src='/build/bundle.js'></script>
 </head>
 
